Fixed couple of warnings.